# Image-app_deployment

./: .gitattributes  Image_class_APP.ipynb  Proposal SmartSort.docx  README.md  config.toml.txt  environment.yml  img_class.py  img_saved_model.h5  packages.txt  pyproject.toml  requirements.txt  tensorflow-2.16.1-cp39-cp39-win_amd64.whl
.devcontainer/: devcontainer.json
