[tool.poetry]
name = "image-app-deployment"
version = "0.1.0"
description = "A streamlit app that uses deep learning to classify and save images into different categorical folder."
authors = ["ghadieh279 <ghadiehmohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
gobject==0.1.0
rawpy==0.19.1
streamlit<1.35.0
tensorflow==2.10.0
Pillow==10.3.0
wxPython @ https://files.pythonhosted.org/packages/ee/c4/dbf0e6696c3bf7b0d24fd9f203107ad27296c81896d7bdb4228e75d400db/wxPython-4.2.1-cp39-cp39-win_amd64.whl

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
