[tool.poetry]
name = "image-app-deployment"
description = "A streamlit app that uses deep learning to classify and save images into different categorical folder."
authors = ["ghadieh279 <ghadiehmohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
